import "cs_head.proto";
import "cs_base.proto";

package fksproto;

//拼单计价类型
enum CrowdCountType
{
	CROWD_COUNT_TYPE_NUMBER = 1;//按数量拼单
	CROWD_COUNT_TYPE_AMOUNT = 2;//按金额拼单
}

//拼单类型
enum CrowdType
{
	CROWD_TYPE_PRODUCT = 1;//按产品拼单
	CROWD_TYPE_ITEM    = 2;//按单品拼单
}

//拼单状态
enum CrowdState
{
	CROWD_STATE_NONE     = 0;
	CROWD_STATE_PENDING  = 1;//待发布
	CROWD_STATE_CROWDING = 2;//拼单中
	CROWD_STATE_SUCCESS  = 3;//成功
	CROWD_STATE_FAILED   = 4;//失败
	CROWD_STATE_CHECKING = 5;//拼单草稿
}

//拼单阶段
message CrowdLadder
{
	optional float goal          = 1;//目标
	optional int32 discount_type = 2;//折扣类型, 1:定值，2:百分比
	optional float discount      = 3;//折扣
}

//拼单基本信息
message Crowd
{
	required int64       crowd_id          = 1; //拼单Id
	optional string      name              = 2; //拼单名称
	optional string      title             = 3; //拼单标题
	optional string      logo              = 4; //拼单Logo
	optional int32       crowd_type        = 5; //拼单类型
	optional int32       count_type        = 6; //计价类型
	optional int32       begin_time        = 7; //开始时间
	optional int32       end_time          = 8; //结束时间
	repeated CrowdLadder ladders           = 9; //阶段信息
	optional float       complete    	   = 10;//完成值
	optional int32       state             = 11;//状态
	optional string      currency_code     = 12;//返回的默认币种
	//optional int32       service_rate_type = 13;//费率类型
	//optional float       service_rate      = 14;//服务费率

}